--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>scriptreplay in javascript</title>
-<script type="text/javascript" src="./VT100.js" ></script>
-<script type="text/javascript" src="./scriptreplay.js" ></script>
+<script type="text/javascript" src="../VT100.js" ></script>
+<script type="text/javascript" src="../scriptreplay.js" ></script>
 <script type="text/javascript"><!--
 window.addEventListener("load", function(evt) {
     vt = new VT100(80, 24, "term");
