--- a/test/index.html
+++ b/test/index.html
@@ -48,8 +48,8 @@ timingfile: <input type="file" id="timingfile" name="typescript" /><br />
 <fieldset>
 <legend>samples</legend>
 <ul id="sample">
-<li><a href="javascript:void()" id="sample_qemu">qemu boot</a></li>
-<li><a href="javascript:void()" id="sample_starwars">star wars</a></li>
+<li><a href="javascript:void()" id="sample_../qemu">qemu boot</a></li>
+<li><a href="javascript:void()" id="sample_../starwars">star wars</a></li>
 </ul>
 </fieldset>
 
