--- a/test/index.html
+++ b/test/index.html
@@ -50,6 +50,7 @@ timingfile: <input type="file" id="timingfile" name="typescript" /><br />
 <ul id="sample">
 <li><a href="javascript:void()" id="sample_../qemu">qemu boot</a></li>
 <li><a href="javascript:void()" id="sample_../starwars">star wars</a></li>
+<li><a href="javascript:void()" id="sample_test">test</a></li>
 </ul>
 </fieldset>
 
