--- a/test/t1.html
+++ b/test/t1.html
@@ -4,7 +4,7 @@
 <script type="text/javascript" src="../VT100.js" ></script>
 <script type="text/javascript" src="../scriptreplay.js" ></script>
 <script type="text/javascript"><!--
-  window.addEventListener("load", function(evt) {
+window.addEventListener("load", function(evt) {
     vt = new VT100(100, 40, "term");
     vt.clear();
     vt.refresh();
@@ -22,13 +22,67 @@
 "      $ scriptreplay timingfile typescript\n" +
 " * Enter `timingfile` and `typescript` into form above and hit the play\n" +
 "   button.\n");
-  play_file("test");
+    document.getElementById("stop").addEventListener("click", stop, false);
+    document.getElementById("speed").addEventListener('change', set_speed, false);
+    document.getElementById("fontsize").addEventListener('change', set_fontsize, false);
+    document.getElementById("play").addEventListener("click", play, false);
+
+    var samples = document.querySelectorAll("ul#sample>li>a[id^=\"sample_\"]");
+    for (var i = 0; i < samples.length; i++) {
+      samples[i].addEventListener('click', function(evt) {
+          play_file(evt.target.id.substr(7));
+      }, false);
+    }
+    }, false);
 
 --></script>
+</head>
 
 <body>
-  <tt><pre id=term></pre></tt>
+
+<fieldset>
+<legend>file input</legend>
+typescript: <input type="file" id="typescript" name="typescript" /><br />
+timingfile: <input type="file" id="timingfile" name="typescript" /><br />
+</fieldset>
+<fieldset>
+<legend>samples</legend>
+<ul id="sample">
+<li><a href="javascript:void()" id="sample_../qemu">qemu boot</a></li>
+<li><a href="javascript:void()" id="sample_../starwars">star wars</a></li>
+<li><a href="javascript:void()" id="sample_test">test</a></li>
+</ul>
+</fieldset>
+
+<tt><pre id=term></pre></tt>
+
+<fieldset>
+<legend>play control</legend>
+<button id="play">play</button>
+<button id="stop">stop</button>
+</fieldset>
+<fieldset>
+<legend>output properties</legend>
+Font size
+<select id="fontsize">
+  <option value="8">8</option>
+  <option value="10">10</option>
+  <option value="12" selected="selected">12</option>
+  <option value="14">14</option>
+  <option value="16">16</option>
+  <option value="18">18</option>
+</select>
+Speed
+<select id="speed">
+  <option value="0.25">slowest</option>
+  <option value="0.5">slower</option>
+  <option value="0.75">slow</option>
+  <option value="1.0" selected="selected">normal</option>
+  <option value="1.5">fast</option>
+  <option value="2.0">faster</option>
+  <option value="4.0">fastest</option>
+</select>
+</fieldset>
 </body>
 
-</head>
 </html>
