--- a/test/t1.html
+++ b/test/t1.html
@@ -29,7 +29,7 @@ window.addEventListener("load", function(evt) {
 
     for (var i = 0; i < samples.length; i++) {
       samples[i].addEventListener('click', function(evt) {
-          play_file(”test“);
+          play_file("test");
       }, false);
     }
     }, false);
