--- a/test/t1.html
+++ b/test/t1.html
@@ -27,7 +27,13 @@ window.addEventListener("load", function(evt) {
     document.getElementById("fontsize").addEventListener('change', set_fontsize, false);
     document.getElementById("play").addEventListener("click", play, false);
 
-    play_file("test");
+    var samples = document.querySelectorAll("ul#sample>li>a[id^=\"sample_\"]");
+    for (var i = 0; i < samples.length; i++) {
+      samples[i].addEventListener('click', function(evt) {
+          play_file(evt.target.id.substr(7));
+      }, false);
+    }
+    }, false);
 --></script>
 </head>
 
@@ -41,8 +47,6 @@ timingfile: <input type="file" id="timingfile" name="typescript" /><br />
 <fieldset>
 <legend>samples</legend>
 <ul id="sample">
-<li><a href="javascript:void()" id="sample_../qemu">qemu boot</a></li>
-<li><a href="javascript:void()" id="sample_../starwars">star wars</a></li>
 <li><a href="javascript:void()" id="sample_test">test</a></li>
 </ul>
 </fieldset>
