--- a/test/t1.html
+++ b/test/t1.html
@@ -27,12 +27,8 @@ window.addEventListener("load", function(evt) {
     document.getElementById("fontsize").addEventListener('change', set_fontsize, false);
     document.getElementById("play").addEventListener("click", play, false);
 
-    var samples = document.querySelectorAll("ul#sample>li>a[id^=\"sample_\"]");
-    for (var i = 0; i < samples.length; i++) {
-      samples[i].addEventListener('click', function(evt) {
-          play_file(evt.target.id.substr(7));
-      }, false);
-    }
+
+    play_file("test");
     }, false);
 --></script>
 </head>
